[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Arjan Gahatraj Sunar <arjan.gahatraj.sunar@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
verions = "0.7.4"
default-features = false
features = ["macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.12.1"
